# Tndktest3

./: settings.gradle
GetVoiceFromTest/: build.gradle
GetVoiceFromTest/src/androidTest/java/com/andriod/myapplication/: ExampleInstrumentedTest.java
GetVoiceFromTest/src/main/: AndroidManifest.xml
GetVoiceFromTest/src/main/java/com/andriod/myapplication/: MainActivity.java
GetVoiceFromTest/src/main/res/layout/: activity_main.xml
GetVoiceFromTest/src/test/java/com/andriod/myapplication/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/andriod/tndktest3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c  native-test.c  native-test.h
app/src/main/java/com/andriod/tndktest3/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/andriod/tndktest3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
